# Skyrim-Split-Screen

./: CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SkyrimSplitScreen  cmake_install.cmake  config.json  implementation_plan.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
SkyrimSplitScreen_autogen/: deps
SkyrimSplitScreen_autogen/WAYUIA5GRM/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
flatpak/: com.example.SkyrimSplitScreen.yaml
src/: Config.cpp  Config.h  GameInstance.cpp  GameInstance.h  Launcher.cpp  Launcher.h  WindowManager.cpp  WindowManager.h  main.cpp
src/UI/: MainWindow.cpp  MainWindow.h
tests/: test_config.cpp
